--- a/users/templates/website/contact.html
+++ b/users/templates/website/contact.html
@@ -42,12 +42,12 @@
 								<div class="menu_wrapper">
 									<nav id="menu">
 										<ul id="menu-main-menu" class="menu menu-main">
-											<li class=" current-menu-item page_item current_page_item"> <a href="index.html"><span>Home</span></a> </li>
+											<li class=" page_item current_page_item"> <a href="index.html"><span>Home</span></a> </li>
 											<li> <a href="{% url 'about' %}"><span>About us</span></a> </li>
 											<li> <a href="{% url 'service' %}"><span>Service</span></a> </li>
 											<li> <a href="{% url 'ijabo' %}"><span>Ijabo</span></a> </li>
-											<li> <a href="{% url 'blog' %}"><span>Blog</span></a> </li>
-											<li> <a href="{% url 'contact_us' %}"><span>Contact</span></a> </li>
+											<li > <a href="{% url 'blog' %}"><span>Blog</span></a> </li>
+											<li class="current-menu-item">> <a href="{% url 'contact_us' %}"><span>Contact</span></a> </li>
 										</ul>
 									</nav><a class="responsive-menu-toggle " href="#"><i class="icon-menu-fine"></i></a> </div>
 							</div>
