--- a/users/templates/website/contact.html
+++ b/users/templates/website/contact.html
@@ -42,12 +42,12 @@
 								<div class="menu_wrapper">
 									<nav id="menu">
 										<ul id="menu-main-menu" class="menu menu-main">
-											<li class=" page_item current_page_item"> <a href="index.html"><span>Home</span></a> </li>
+											<li class=" page_item "> <a href="{% url 'index' %}"><span>Home</span></a> </li>
 											<li> <a href="{% url 'about' %}"><span>About us</span></a> </li>
 											<li> <a href="{% url 'service' %}"><span>Service</span></a> </li>
 											<li> <a href="{% url 'ijabo' %}"><span>Ijabo</span></a> </li>
 											<li > <a href="{% url 'blog' %}"><span>Blog</span></a> </li>
-											<li class="current-menu-item">> <a href="{% url 'contact_us' %}"><span>Contact</span></a> </li>
+											<li class="current-menu-item"><a href="{% url 'contact_us' %}"><span>Contact</span></a> </li>
 										</ul>
 									</nav><a class="responsive-menu-toggle " href="#"><i class="icon-menu-fine"></i></a> </div>
 							</div>
@@ -94,7 +94,7 @@
 													Kigali, Nyarugenge
 													</h4>
 												<hr class="no_line" style="margin:0 auto 50px">
-												<h3 style="color:#FFF;"><i class="icon-mobile" style></i> +42 30 50 7789</h3>
+												<h3 style="color:#FFF;"><i class="icon-mobile" style></i>+250 788 888 888</h3>
 												<h3 style="color:#FFF; word-wrap: break-word;"><i class="icon-mail" style></i><a href="#" >noreply@envato.com</a></h3> </div>
 										</div>
 										<div class="column mcb-column mcb-item-lw0uwepr5 one-third column_column">
