--- a/users/templates/website/index.html
+++ b/users/templates/website/index.html
@@ -47,7 +47,7 @@
 								<div class="menu_wrapper">
 									<nav id="menu">
 										<ul id="menu-main-menu" class="menu menu-main">
-											<li class=" current-menu-item page_item current_page_item"> <a href="index.html"><span>Home</span></a> </li>
+											<li class=" current-menu-item page_item"> <a href="{% url 'index' %}"><span>Home</span></a> </li>
 											<li> <a href="{% url 'about' %}"><span>About us</span></a> </li>
 											<li> <a href="{% url 'service' %}"><span>Service</span></a> </li>
 											<li> <a href="{% url 'ijabo' %}"><span>Ijabo</span></a> </li>
@@ -318,7 +318,6 @@ all our services. We charge less than half our competitors' prices</h5> </div>
 										</div>
 										
 
-										<div class="column mcb-column mcb-item-0dm9rimjw one column_button"> <a class="button button_size_2 button_theme" href="service.html"><span class="button_label">SEE ALL VEHICLES</span></a> </div>
 									</div>
 								</div>
 								<div class="wrap mcb-wrap mcb-wrap-fexelc2ru one-second valign-middle clearfix" style="padding:0 5%">
