--- a/users/templates/website/product_page.html
+++ b/users/templates/website/product_page.html
@@ -371,7 +371,7 @@
 								<div style="text-align: center;">
 									<h3>Simple, Affordable and Reliable Access to
 										<br>
-										<span class="themecolor">Clean Safe Water</span></h3>
+										<span style="color:#3de372">Clean Safe Water</span></h3>
 									<hr class="no_line" style="margin:0 auto 20px">
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
