--- a/users/templates/website/service.html
+++ b/users/templates/website/service.html
@@ -44,9 +44,9 @@
 								<div class="menu_wrapper">
 									<nav id="menu">
 										<ul id="menu-main-menu" class="menu menu-main">
-											<li class=" page_item current_page_item"> <a href="index.html"><span>Home</span></a> </li>
-											<li> <a href="{% url 'about' %}"><span>About us</span></a> </li>
-											<li class="current-menu-item">> <a href="{% url 'service' %}"><span>Service</span></a> </li>
+											<li class="page_item"> <a href="{% url 'index' %}"><span>Home</span></a> </li>
+											<li><a href="{% url 'about' %}"><span>About us</span></a> </li>
+											<li class="current-menu-item"> <a href="{% url 'service' %}"><span>Service</span></a> </li>
 											<li> <a href="{% url 'ijabo' %}"><span>Ijabo</span></a> </li>
 											<li> <a href="{% url 'blog' %}"><span>Blog</span></a> </li>
 											<li> <a href="{% url 'contact_us' %}"><span>Contact</span></a> </li>
@@ -309,7 +309,7 @@
 											</div>
 											<div class="column mcb-column mcb-item-8d810f407 one-second column_column">
 												<div class="column_attr clearfix mobile_align_center" style="padding:10px 0 0;">
-													<h3 style="color:#FFF;"><i class="icon-mobile" style="color:#fff"></i> +42 30 50 7789</h3>
+													<h3 style="color:#FFF;"><i class="icon-mobile" style="color:#fff"></i>+250 788 888 888</h3>
 													<hr class="no_line" style="margin:0 auto 40px">
 													<h5>Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt ut eros a, vulputate consequat.</h5>
 												</div>
@@ -383,7 +383,7 @@
 					</div>
 				</div>
 			</div>
-		</footer>
+</footer>
 		</div>
 		<div id="Side_slide" class="right dark" data-width="250">
 			<div class="close-wrapper">
