--- a/users/templates/website/shop.html
+++ b/users/templates/website/shop.html
@@ -88,14 +88,14 @@
                                             <li class="isotope-item product">
                                                 <div class="image_frame scale-with-grid product-loop-thumb" >
                                                     <div class="image_wrapper">
-                                                        <a href="product_page.html">
+                                                        <a href="{% url 'product' %}">
                                                             <div class="mask"></div><img width="800" height="800" src="{% static "web/images/poster_2_up-500x500.jpg"%}" class="scale-with-grid wp-post-image" alt="">
                                                         </a>
                                                         
-                                                    </div><span class="onsale"><i class="icon-star"></i></span><a href="product_page.html"><span class="product-loading-icon added-cart"></span></a>
+                                                    </div><span class="onsale"><i class="icon-star"></i></span><a href="{% url 'product' %}"><span class="product-loading-icon added-cart"></span></a>
                                                 </div>
                                                 <div class="desc">
-                                                    <h4><a href="product_page.html">Flying Ninja</a></h4>
+                                                    <h4><a href="{% url 'product' %}">Flying Ninja</a></h4>
                                                     
                                                     <span class="price"><del><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>15.00</span>
                                                     </del> <ins><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>12.00</span></ins>
@@ -105,14 +105,14 @@
                                             <li class="isotope-item product">
                                                 <div class="image_frame scale-with-grid product-loop-thumb" >
                                                     <div class="image_wrapper">
-                                                        <a href="product_page.html">
+                                                        <a href="{% url 'product' %}">
                                                             <div class="mask"></div><img width="500" height="500" src="{% static "web/images/T_7_front-500x500.jpg"%}" class="scale-with-grid wp-post-image" alt="">
                                                         </a>
                                                         
-                                                    </div><a href="product_page.html"><span class="product-loading-icon added-cart"></span></a>
+                                                    </div><a href="{% url 'product' %}"><span class="product-loading-icon added-cart"></span></a>
                                                 </div>
                                                 <div class="desc">
-                                                    <h4><a href="product_page.html">Happy Ninja</a></h4>
+                                                    <h4><a href="{% url 'product' %}">Happy Ninja</a></h4>
                                                     
                                                     <span class="price"><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>18.00</span>
                                                     </span>
@@ -121,14 +121,14 @@
                                             <li class="isotope-item product">
                                                 <div class="image_frame scale-with-grid product-loop-thumb" >
                                                     <div class="image_wrapper">
-                                                        <a href="product_page.html">
+                                                        <a href="{% url 'product' %}">
                                                             <div class="mask"></div><img width="500" height="500" src="{% static "web/images/hoodie_4_front-500x500.jpg"%}" class="scale-with-grid wp-post-image" alt="">
                                                         </a>
                                                         
-                                                    </div><a href="product_page.html"><span class="product-loading-icon added-cart"></span></a>
+                                                    </div><a href="{% url 'product' %}"><span class="product-loading-icon added-cart"></span></a>
                                                 </div>
                                                 <div class="desc">
-                                                    <h4><a href="product_page.html">Happy Ninja</a></h4>
+                                                    <h4><a href="{% url 'product' %}">Happy Ninja</a></h4>
                                                    
                                                     <span class="price"><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>35.00</span>
                                                     </span>
@@ -180,7 +180,7 @@
 								<div style="text-align: center;">
 									<h3>Simple, Affordable and Reliable Access to
 										<br>
-										<span class="themecolor">Clean Safe Water</span></h3>
+										<span style="color:#3de372">Clean Safe Water</span></h3>
 									<hr class="no_line" style="margin:0 auto 20px">
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
