--- a/users/templates/website/about.html
+++ b/users/templates/website/about.html
@@ -46,8 +46,8 @@
 								<div class="menu_wrapper">
 									<nav id="menu">
 										<ul id="menu-main-menu" class="menu menu-main">
-											<li class="  page_item current_page_item"> <a href="index.html"><span>Home</span></a> </li>
-											<li class="current-menu-item">> <a href="{% url 'about' %}"><span>About us</span></a> </li>
+											<li class="page_item"> <a href="{% url 'index' %}"><span>Home</span></a> </li>
+											<li class="current-menu-item"><a href="{% url 'about' %}"><span>About us</span></a> </li>
 											<li> <a href="{% url 'service' %}"><span>Service</span></a> </li>
 											<li> <a href="{% url 'ijabo' %}"><span>Ijabo</span></a> </li>
 											<li> <a href="{% url 'blog' %}"><span>Blog</span></a> </li>
@@ -127,7 +127,6 @@ all our services. We charge less than half our competitors' prices</h5> </div>
 										</div>
 										
 
-										<div class="column mcb-column mcb-item-0dm9rimjw one column_button"> <a class="button button_size_2 button_theme" href="service.html"><span class="button_label">SEE ALL VEHICLES</span></a> </div>
 									</div>
 								</div>
 								<div class="wrap mcb-wrap mcb-wrap-fexelc2ru one-second valign-middle clearfix" style="padding:0 5%">
@@ -420,7 +419,7 @@ I can now clean the house and do laundry anytime I want. Before It was so compli
                                                     <div class="post-head">
                                                         <div class="post-meta clearfix">
                                                             <div class="author-date">
-                                                                <span class="date"><i class="icon-clock"></i> <span class="post-date updated">2020</span></span>
+                                                                <span class="date"><i class="icon-clock"></i> <span class="post-date updated" >2020</span></span>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -741,11 +740,11 @@ I can now clean the house and do laundry anytime I want. Before It was so compli
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-3rrsmed0b one column_column column-margin-0px">
 											<div class="column_attr clearfix align_center" style="background-color:#f5f5f5;padding:120px 15% 80px;border-radius: 15px 15px 0 0;">
-												<h2>Start your ride today. Your <span class="themecolor">scooter is waiting</span> for you to rent nearby.</h2>
+												<h2>info@warwanda.com <span class="themecolor"><br>+250 780 303 482</span></h2>
 												<hr class="no_line" style="margin:0 auto 40px">
-												<h5 style="color:#8e9aac">Donec in sem et urna faucibus bibendum non venenatis ipsum.
+												<h5 style="color:#8e9aac">Our complete trust and confidence that God will lead us to eradicate the water crisis
 													<br>
-													Mauris mollis metus id dui sodales mollis.</h5> </div>
+													</h5> </div>
 										</div>
 									</div>
 								</div>
@@ -836,9 +835,11 @@ I can now clean the house and do laundry anytime I want. Before It was so compli
 										</div>
 										<div class="column mcb-column mcb-item-rdmk0kaum one-second column_column">
 											<div class="column_attr clearfix" style="padding:10px 0 0;">
-												<h3 style="color:#FFF;"><i class="icon-mobile" style="color:#fff"></i> +42 30 50 7789</h3>
+												<h3 style="color:#FFF;"><i class="icon-mobile" style="color:#fff"></i>+250 788 888 888</h3>
 												<hr class="no_line" style="margin:0 auto 40px">
-												<h5>Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt ut eros a, vulputate consequat.</h5> </div>
+												<h5>Simple, Affordable and Reliable Access to
+
+Clean Safe Water</h5> </div>
 										</div>
 										<div class="column mcb-column mcb-item-7wvz14qwd one column_button">
 											<div class="button_align align_center"> <a class="button button_size_2" href="contact.html"><span class="button_label">SEND US A MESSAGE</span></a> </div>
@@ -858,13 +859,13 @@ I can now clean the house and do laundry anytime I want. Before It was so compli
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h6 style="color:#7d7d7d">MEET US</h6>
+									<h6 style="color:#7d7d7d">QUICK LINKS</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="ijabo.html">How it works</a> </p>
-									<p> <a href="service.html">Find a vehicle</a> </p>
-									<p> <a href="index.html#pricing">Pricing</a> </p>
 									<p> <a href="about.html"> About us</a> </p>
+									<p> <a href="service.html">Service</a> </p>
+									<p> <a href="ijabo.html">How it works</a> </p>
 									<p> <a href="contact.html">Contact</a> </p>
+									<p> <a href="#">fAQs</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -873,15 +874,15 @@ I can now clean the house and do laundry anytime I want. Before It was so compli
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h3>Rent a scooter
+									<h3>Simple, Affordable and Reliable Access to
 										<br>
-										<span class="themecolor">just like that!</span></h3>
+										<span class="themecolor">Clean Safe Water</span></h3>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<a href="#"><img src="images/scooterrental-footer-btn1.png"></a>
-									<a href="#"><img src="images/scooterrental-footer-btn2.png"></a>
+									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
+									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="contact.html">FIND OUT MORE <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
-									<hr class="no_line" style="margin:0 auto 80px"> <img src="images/scooterrental-footer-logo.png"> </div>
+									<p> <a href="contact.html">CONTACT US <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
+									<hr class="no_line" style="margin:0 auto 80px"> </div>
 							</div>
 						</aside>
 					</div>
@@ -891,11 +892,11 @@ I can now clean the house and do laundry anytime I want. Before It was so compli
 								<div style="text-align: center;">
 									<h6 style="color:#7d7d7d">MORE INFO</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="#">News</a> </p>
-									<p> <a href="#">FAQ</a> </p>
-									<p> <a href="#">Work</a> </p>
-									<p> <a href="#"> Franchise</a> </p>
-									<p> <a href="#">Partners</a> </p>
+									<p> <a href="#">Inuma</a> </p>
+									<p> <a href="#">Amazi</a> </p>
+									<p> <a href="#">Uhira</a> </p>
+									<p> <a href="#">Voma</a> </p>
+									<p> <a href="#">Ijabo</a> </p>
 								</div>
 							</div>
 						</aside>
@@ -905,11 +906,11 @@ I can now clean the house and do laundry anytime I want. Before It was so compli
 			<div class="footer_copy">
 				<div class="container">
 					<div class="column one">
-						<div class="copyright"> &copy; 2021 BeScooterRental - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="https://1.envato.market/9ZxXY">BeantownThemes</a> </div>
+						<div class="copyright"> &copy; <script>document.write(new Date().getFullYear());</script> Water Access Rwanda </div>
 					</div>
 				</div>
 			</div>
-		</footer>
+</footer>
 	</div>
 	<div id="Side_slide" class="right dark" data-width="250">
 		<div class="close-wrapper"> <a href="#" class="close"><i class="icon-cancel-fine"></i></a> </div>
