--- a/users/templates/website/about.html
+++ b/users/templates/website/about.html
@@ -153,7 +153,7 @@ all our services. We charge less than half our competitors' prices</h5> </div>
 
 
 
-						<div class="section mcb-section mcb-section-gzlmntrq6" style="padding-top:120px;padding-bottom:80px">
+						<div class="section mcb-section mcb-section-gzlmntrq6" style="padding-top:120px">
 							<div class="section_wrapper mcb-section-inner">
 								<div class="wrap mcb-wrap mcb-wrap-jifsx5k4b one valign-top clearfix" >
 									<div class="mcb-wrap-inner">
@@ -825,24 +825,25 @@ I can now clean the house and do laundry anytime I want. Before It was so compli
 								</div>
 							</div>
 						</div>
-						<div class="section mcb-section mcb-section-evs7yzurd full-width bg-cover" style="padding-top:120px;padding-left:5%;padding-right:5%;background-color:#020202">
-							<div class="section_wrapper mcb-section-inner">
-								<div class="wrap mcb-wrap mcb-wrap-odqd5mqx0 one scooterrental-wrap-radius valign-top bg-cover move-up clearfix" style="padding:100px 15%;background-color:#00d285;margin-top:-320px;background-image:url({% static "web/images/scooterrental-section-bg2.png" %});background-repeat:no-repeat;background-position:center" data-mobile="no-up">
-									<div class="mcb-wrap-inner">
-										<div class="column mcb-column mcb-item-8ad3u8f0r one-second column_column">
-											<div class="column_attr clearfix" style="padding:0 10% 0 0;">
-												<h2 style="color:#FFF;">If you have any questions, please feel free to call us</h2> </div>
-										</div>
-										<div class="column mcb-column mcb-item-rdmk0kaum one-second column_column">
-											<div class="column_attr clearfix" style="padding:10px 0 0;">
-												<h3 style="color:#FFF;"><i class="icon-mobile" style="color:#fff"></i>+250 788 888 888</h3>
-												<hr class="no_line" style="margin:0 auto 40px">
-												<h5>Simple, Affordable and Reliable Access to
-
-Clean Safe Water</h5> </div>
-										</div>
-										<div class="column mcb-column mcb-item-7wvz14qwd one column_button">
-											<div class="button_align align_center"> <a class="button button_size_2" href="contact.html"><span class="button_label">SEND US A MESSAGE</span></a> </div>
+						<div class="section mcb-section mcb-section-f698c00f3 full-width bg-cover" style="padding-top:120px;padding-left:5%;padding-right:5%;background-color:#020202" >
+								<div class="section_wrapper mcb-section-inner">
+									<div class="wrap mcb-wrap mcb-wrap-f96ea2ed0 one scooterrental-wrap-radius valign-top bg-cover move-up clearfix" style="padding:100px 15%;background-color:#00d285;margin-top:-320px;background-image:url({% static "web/images/scooterrental-section-bg2.png" %});background-repeat:no-repeat;background-position:left top" data-mobile="no-up">
+										<div class="mcb-wrap-inner">
+											<div class="column mcb-column mcb-item-dbdd0316b one-second column_column">
+												<div class="column_attr clearfix" style="padding:0 10% 0 0;">
+													<h2 style="color:#FFF;">If you have any questions, please feel free to call us</h2>
+												</div>
+											</div>
+											<div class="column mcb-column mcb-item-8d810f407 one-second column_column">
+												<div class="column_attr clearfix mobile_align_center" style="padding:10px 0 0;">
+													<h3 style="color:#FFF;"><i class="icon-mobile" style="color:#fff"></i>+250 788 888 888</h3>
+													<hr class="no_line" style="margin:0 auto 40px">
+													<h5>Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt ut eros a, vulputate consequat.</h5>
+												</div>
+											</div>
+											<div class="column mcb-column mcb-item-7a8f9e84c one column_button">
+												<a class="button button_size_2" href="contact.html" ><span class="button_label">SEND US A MESSAGE</span></a>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -851,8 +852,7 @@ Clean Safe Water</h5> </div>
 					</div>
 				</div>
 			</div>
-		</div>
-		<footer id="Footer" class="clearfix ">
+<footer id="Footer" class="clearfix ">
 			<div class="widgets_wrapper ">
 				<div class="container">
 					<div class="column one-third">
