--- a/users/templates/website/shop.html
+++ b/users/templates/website/shop.html
@@ -22,7 +22,7 @@
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="{% static "web/images/favicon.ico" %}">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!-- FONTS -->
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
@@ -32,8 +32,113 @@
     <!-- CSS -->
     <link rel='stylesheet' href="{% static "web/css/global.css"%}">
     <link rel='stylesheet' href="{% static "web/css/structure.css"%}">
+	<link rel='stylesheet' href="{% static "web/css/scooterrental.css" %}">
     <link rel='stylesheet' href="{% static "web/css/betheme.css"%}">
     <link rel='stylesheet' href="{% static "web/css/custom.css"%}">
+
+    <style>
+
+        body{
+	background-color: hsl(0, 0%, 98%);
+}
+
+h1,h2,h3,h4,h5,h6{
+	color:hsl(0, 0%, 30%);
+}
+
+.box-element{
+	box-shadow:hsl(0, 0%, 80%) 0 0 16px;
+	background-color: #fff;
+	border-radius: 4px;
+	padding: 10px;
+}
+
+.thumbnail{
+	width: 100%;
+	height: 200px;
+	-webkit-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
+    -moz-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
+    box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
+}
+
+.product{
+	border-radius: 0 0 4px 4px;
+}
+
+.bg-dark{
+	background-color: #4f868c!important;
+}
+
+#cart-icon{
+	width:25px;
+	display: inline-block;
+	margin-left: 15px;
+}
+
+#cart-total{
+	display: block;
+	text-align: center;
+	color:#fff;
+	background-color: red;
+	width: 20px;
+	height: 25px;
+	border-radius: 50%;
+	font-size: 14px;
+}
+
+.col-lg-4, .col-lg-6, .col-lg-8, .col-lg-12{
+	margin-top: 10px;
+}
+
+.btn{
+	border-radius: 0;
+}
+
+.row-image{
+	width: 100px;
+}
+
+.form-field{
+	width:250px;
+	display: inline-block;
+	padding: 5px;
+}
+
+.cart-row{
+	display: flex;
+    align-items: flex-stretch;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #ececec;
+
+}
+
+.quantity{
+	display: inline-block;
+	font-weight: 700;
+	padding-right:10px;
+	
+
+}
+
+.chg-quantity{
+	width: 12px;
+	cursor: pointer;
+	display: block;
+	margin-top: 5px;
+	transition:.1s;
+}
+
+.chg-quantity:hover{
+	opacity: .6;
+}
+
+
+.hidden{
+	display: none!important;
+}
+
+    </style>
 
 
 </head>
@@ -45,10 +150,11 @@
 				<div id="Top_bar" style="background-color:white;border:none">
 					<div class="container">
 						<div class="column one">
-							<div class="top_bar_left clearfix"  >
+							<div class="top_bar_left clearfix">
 								<div class="logo">
-									<a id="logo" href="{% url 'index' %}" title="BeScooterRental - Betheme" data-height="60" data-padding="30"><img class="logo-main scale-with-grid" src="{% static "web/images/scooterrental.png"%}"   data-height="50" alt="scooterrental" data-no-retina></a>
+									<a id="logo" href="{% url 'index' %}" title="BeScooterRental - Betheme" data-height="60" data-padding="30"><img class="logo-main scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/retina-scooterrental.png" %}" data-height="50" alt="scooterrental" data-no-retina><img class="logo-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/retina-scooterrental.png" %}" data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile scale-with-grid" src="{% static "web/images/scooterrental.png"%}"  data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}"  data-height="50" alt="scooterrental" data-no-retina></a>
 								</div>
+                                
 								<div class="menu_wrapper">
 									<nav id="menu">
 										<ul id="menu-main-menu" class="menu menu-main" >
@@ -59,6 +165,7 @@
 											<li> <a href="{% url 'blog' %}"><span style="border:none;color:black">Blog</span></a> </li>
 											<li> <a href="{% url 'contact_us' %}"><span style="border:none;color:black">Contact</span></a> </li>
 										</ul>
+                                        
 									</nav><a class="responsive-menu-toggle " href="#"><i class="icon-menu-fine"></i></a> </div>
 							</div>
 							
@@ -70,9 +177,28 @@
             <div id="Subheader">
                 <div class="container">
                     <div class="column one">
-                        <h1 class="title">Shop</h1>
+
+                        <div  style='display:inline;float:left;'>
+                          <h1 class="title">Shop</h1>
+                        </div>
+
+                        <div style='display:inline;float:right;'>
+                         <p id="cart-total">{{cartItems}}</p>
+                       </div>
+
+                        <div  style='display:inline;float:right;'>
+                        
+                            <a href="{% url 'cart'%}">
+                                <img  id="cart-icon" src="{% static 'img/cart.png' %}">
+                            </a>
+
+                       </div>
+
+                       
                     </div>
+                    
                 </div>
+                
             </div>
         </div>
         <div id="Content">
@@ -85,60 +211,30 @@
                                    
                                     <div class="products_wrapper isotope_wrapper">
                                         <ul class="products grid">
+                                        
+                                        {% for product in products %}
+                                           
                                             <li class="isotope-item product">
                                                 <div class="image_frame scale-with-grid product-loop-thumb" >
                                                     <div class="image_wrapper">
-                                                        <a href="{% url 'product' %}">
-                                                            <div class="mask"></div><img width="800" height="800" src="{% static "web/images/poster_2_up-500x500.jpg"%}" class="scale-with-grid wp-post-image" alt="">
+                                                        <a href="{% url 'product' product.id %}">
+                                                            <div class="mask" ></div><img style='width: 500px;height: 200px' src={{product.imageURL}} class="scale-with-grid" alt="">
                                                         </a>
                                                         
-                                                    </div><span class="onsale"><i class="icon-star"></i></span><a href="{% url 'product' %}"><span class="product-loading-icon added-cart"></span></a>
+                                                    </div><a href="{% url 'product' product.id %}"><span class="product-loading-icon added-cart"></span></a>
                                                 </div>
                                                 <div class="desc">
-                                                    <h4><a href="{% url 'product' %}">Flying Ninja</a></h4>
-                                                    
-                                                    <span class="price"><del><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>15.00</span>
-                                                    </del> <ins><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>12.00</span></ins>
-                                                    </span>
-                                                </div>
-                                            </li>
-                                            <li class="isotope-item product">
-                                                <div class="image_frame scale-with-grid product-loop-thumb" >
-                                                    <div class="image_wrapper">
-                                                        <a href="{% url 'product' %}">
-                                                            <div class="mask"></div><img width="500" height="500" src="{% static "web/images/T_7_front-500x500.jpg"%}" class="scale-with-grid wp-post-image" alt="">
-                                                        </a>
-                                                        
-                                                    </div><a href="{% url 'product' %}"><span class="product-loading-icon added-cart"></span></a>
-                                                </div>
-                                                <div class="desc">
-                                                    <h4><a href="{% url 'product' %}">Happy Ninja</a></h4>
-                                                    
-                                                    <span class="price"><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>18.00</span>
-                                                    </span>
-                                                </div>
-                                            </li>
-                                            <li class="isotope-item product">
-                                                <div class="image_frame scale-with-grid product-loop-thumb" >
-                                                    <div class="image_wrapper">
-                                                        <a href="{% url 'product' %}">
-                                                            <div class="mask"></div><img width="500" height="500" src="{% static "web/images/hoodie_4_front-500x500.jpg"%}" class="scale-with-grid wp-post-image" alt="">
-                                                        </a>
-                                                        
-                                                    </div><a href="{% url 'product' %}"><span class="product-loading-icon added-cart"></span></a>
-                                                </div>
-                                                <div class="desc">
-                                                    <h4><a href="{% url 'product' %}">Happy Ninja</a></h4>
+                                                    <h4><a href="{% url 'product' product.id %}">{{product.name}}</a></h4>
                                                    
-                                                    <span class="price"><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">&#36;</span>35.00</span>
+                                                    <span class="price">
+                                                        <span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">Rwf </span>{{product.price}}</span>
                                                     </span>
+                                                    <button data-product="{{product.id}}" data-action="add" class="single_add_to_cart_button button alt update-cart">
+                                                        Add to cart
+                                                    </button>
                                                 </div>
                                             </li>
-                                            
-                                            
-                                            
-                                            
-                                           >
+                                            {% endfor %}
                                         </ul>
                                     </div>
                                     <div class="column one pager_wrapper">
@@ -251,6 +347,63 @@
             }
         });
     </script>
+
+
+     <script>
+     var user = '{{request.user}}'
+
+		function getToken(name) {
+		    var cookieValue = null;
+		    if (document.cookie && document.cookie !== '') {
+		        var cookies = document.cookie.split(';');
+		        for (var i = 0; i < cookies.length; i++) {
+		            var cookie = cookies[i].trim();
+		            // Does this cookie string begin with the name we want?
+		            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+		                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+		                break;
+		            }
+		        }
+		    }
+		    return cookieValue;
+		}
+		var csrftoken = getToken('csrftoken')
+        var updateBtns = document.getElementsByClassName('update-cart')
+
+for (i = 0; i < updateBtns.length; i++) {
+	updateBtns[i].addEventListener('click', function(){
+		var productId = this.dataset.product
+		var action = this.dataset.action
+		console.log('productId:', productId, 'Action:', action)
+		updateUserOrder(productId, action)
+		
+	})
+}
+
+function updateUserOrder(productId, action){
+	console.log('User is authenticated, sending data...')
+
+		var url = '/updateItem/'
+
+		fetch(url, {
+			method:'POST',
+			headers:{
+				'Content-Type':'application/json',
+				'X-CSRFToken':csrftoken,
+			}, 
+			body:JSON.stringify({'productId':productId, 'action':action})
+		})
+		.then((response) => {
+		   return response.json();
+		})
+		.then((data) => {
+		    location.reload()
+		});
+}
+
+
+    </script>
+
 
 
 </body>
